--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "author": "Adam Miskiewicz <adam@sk3vy.com>, Eric Vicenti <ericvicenti@gmail.com>, Brent Vatne <brent@expo.io>, Satyajit Sahoo <satyajit.happy@gmail.com>",
   "scripts": {
-    "lint": "eslint --ext '.js,.ts,.tsx' .",
+    "lint": "eslint --ext '.js,.ts,.tsx'",
     "typescript": "tsc --noEmit --composite false",
     "test": "jest",
     "prerelease": "yarn lerna run clean",
